[metadata]
package_name = pysiaf
description = Handling of Science Instrument Aperture Files (SIAF) for space telescopes
long_description = A python package to access, interpret, maintain, and generate Science Instrument Aperture Files, in particular of JWST. Tools for applying the frame transformations, plotting, comparison, and validation are provided.
author = STScI
author_email = help@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/pysiaf
description-file = README.md
url = http://www.stsci.edu/
homepage = http:://www.stsci.edu/

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build relic

[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
